<resources>
    <string name="app_name">Event Planner</string>

    <string name="title_section1">Welcome</string>
    <string name="title_section2">Calendar</string>
    <string name="title_section3">Actions</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="employee">Employee</string>
    <string name="role">Role</string>

    <string name="add_event">Add Event</string>
    <string name="view_events">View Events</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>

    <string name="create_employee">Create Employee</string>

    <string name="untitled">(untitled)</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first">First</string>
    <string name="last">Last</string>

    <string name="edit_add">Edit / Add</string>
    <string name="delete">Delete</string>

    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="location">Location</string>
    <string name="create_event">Create Event</string>

    <string name="logout">Logout</string>

    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_passwordRepeat">Repeat password</string>
    <string name="string_encrypt_database">Encrypt Database</string>
    <string name="string_decrypt_database">Decrypt Database</string>
    <string name="string_language">Language</string>
    <string name="string_client">Client</string>
    <string name="string_role">Role</string>
    <string name="title_activity_settings">Settings</string>
    <string name="string_organization">Organization</string>
    <string name="string_warehouse">Warehouse</string>
    <string name="string_priceListVersion">Price List Version</string>
    <string name="string_webservice">Webservice Address</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
